removed sleep()